# digitalwellbeing-daemon

./: .gitignore  BarChart.qml  CMakeLists.txt  README.md  dbushelper.h  dbusinterface.cpp  dbusinterface.h  eventmonitor.cpp  eventmonitor.h  eventmonitor.xml  eventmonitor_adaptor.cpp  eventmonitor_adaptor.h  log2json  logger.cpp  logger.h  usagestatitem.cpp
debian/: README  README.Debian  changelog  control  postinst.ex  postrm.ex  preinst.ex  prerm.ex
src/: appinfo.cpp  appinfo.h  dbusinterface.cpp  eventmonitor.cpp  eventmonitor.h  logger.cpp  main.cpp  usagestatitem.h
src/dbus/: org.deepin.dde.digitalWellbeing.service.in
src/dbusservices/: org.deepin.dde.digitalWellbeing.service
src/systemd/: org.deepin.dde.digitalWellbeing.service.in
